Closed Bug 384229 Opened 18 years ago Closed 18 years ago

Labels on the search and location boxes are not Read.

Categories

(Firefox :: Disability Access, defect)

x86
Windows Vista
defect
Not set
normal

Tracking

()

RESOLVED FIXED

People

(Reporter: tkeenan, Unassigned)

References

(Blocks 1 open bug)

Details

Attachments

(1 file)

User-Agent: Mozilla/5.0 (Windows; U; Windows NT 6.0; en-US; rv:1.9a6pre) Gecko/20070612 Minefield/3.0a6pre Build Identifier: Mozilla/5.0 (Windows; U; Windows NT 6.0; en-US; rv:1.9a6pre) Gecko/20070612 Minefield/3.0a6pre Screen-readers are not reading the labels associated with the search and location boxs in FF3. This could be because the labels don't exist. Reproducible: Always Steps to Reproduce: 1. Open Firefox 3. Press ctrl+l 2. If you wish, press tab to get to the search box. 3. Actual Results: You hear the type of field, i.e. edit or edit combo, but not it's name. Expected Results: Same behavior as FF2. Upon pressing ctrl+l you should hear "Location" foby the field type. Pressing ttab should yield "search." Sorry for the mess. I'll clean up once I go back to FF2.
Version: unspecified → Trunk
Summary: Labels on the search and location boxes are not rad. → Labels on the search and location boxes are not Read.
Blocks: chromea11y
Attachment #268203 - Flags: review? → review+
Status: UNCONFIRMED → ASSIGNED
Ever confirmed: true
Attachment #268203 - Flags: review?(mano)
Comment on attachment 268203 [details] [diff] [review] Fix nsHTMLTextFieldAccessible() so that XUL parent's name is reused for it, 2) Provide nice accessible name for <searchbox> e.g. "Search Google" I guess... note we didn't do this for the grayed-out text in this field because of engines like "MSN Search"; for the screen-reader case that's still better though. please add the readonly attribute to your getter, r=me otherwise.
Attachment #268203 - Flags: review?(mano) → review+
Status: ASSIGNED → RESOLVED
Closed: 18 years ago
Resolution: --- → FIXED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: