Bug 384229. No accessible name for location and search fields. r=ginn.chen, r=mano